fix bracing to match project style